--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ ul {
 
 .main {
   max-width: 75rem;
-  padding: 3em 1.5em;
+  padding: 3em 0rem;
 }
 
 .main__heading {
@@ -60,7 +60,7 @@ ul {
   display: grid;
   grid-template-rows: auto auto auto 1fr;
   align-items: start;
-  gap: 1.25em;
+  gap: 0.25em;
   color: #eceff1;
   background-color: #2b2b2b;
   border: 1px solid #eceff133;
